Minor bug fixes
Made the text and growth from growing / shrinking buttons smoother
Fixed the issue with toggling no help button in settings displaying incorrectly once returning to the screen.
Fixed the issue where high contrast toggle was not working properly, and added extra responsiveness to the toggle. it now works immediately in the background.
Made most menus more visible by increasing opacity
Added extra margin to the win screen.

--- a/style/buttons.css
+++ b/style/buttons.css
@@ -142,7 +142,7 @@
 .absolute-button {
     position: fixed;
     height: 50px;
-    width: 50px;
+    width: 75px;
     top: 5px;
     transition: width 0.15s ease;
 
@@ -152,6 +152,8 @@
 .absolute-button:hover {
     width: 200px;
 }
+
+/* SETTINGS BUTTON */
 
 #game-settings-button {
     left: 5px;
@@ -168,6 +170,10 @@
     background-color: #aa3434;
 }
 
+/*#game-settings-button:hover::after {
+    content: "⚙";
+}*/
+
 #game-settings-button.show-after:hover::after {
     content: "SETTINGS";
 }
@@ -175,6 +181,8 @@
 #game-settings-button:active {
     background-color: #912e2e;
 }
+
+/* INSTRUCTIONS */
 
 #instructions-button {
     right: 5px;
@@ -187,7 +195,12 @@
 
 #instructions-button:hover {
     background-color: #d8b34b;
+    width: 250px;
 }
+
+/*#instructions-button:hover::after {
+    content: "?";
+}*/
 
 #instructions-button.show-after:hover::after {
     content: "INSTRUCTIONS";
@@ -196,7 +209,6 @@
 #instructions-button:active {
     background-color: #c1a147;
 }
-
 
 /* -------------------------------- ANIMATIONS --------------------------------------------*/
 
