--- a/style/help.css
+++ b/style/help.css
@@ -37,3 +37,8 @@
 #help-button:hover { background-color: #ddd; }
 #help-button:active { background-color: #ccc; }
 
+
+
+.no-display {
+    display: none !important;
+}
