--- a/style/title-screen.css
+++ b/style/title-screen.css
@@ -18,7 +18,7 @@
 }
 
 .title-screen-container {
-    background-color: #ffffff80;
+    background-color: #ffffffd0;
     border: #000 solid 1px;
     border-radius: 12px;
     padding: 32px;
