--- a/style/win-screen.css
+++ b/style/win-screen.css
@@ -5,3 +5,7 @@
     justify-content: center;
     height: 100vh;
 }*/
+
+.win-button {
+    margin-top: 32px;
+}
